# IsoComp

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  generate_synthetic_data.py  rseqc_annotation_dependence.py  synthetic_truth_benchmark.py
docs/: logic_review_zh.md  software_availability.md
isocomp/: __init__.py  annotation.py  assigner.py  bam_parser.py  candidate.py  cli.py  io.py  metrics.py  models.py  plots.py  projection.py  report.py  utils.py
scripts/: run_synthetic_example.sh
tests/: conftest.py  test_annotation.py  test_assignment.py  test_bam_parser.py  test_candidate.py  test_cli.py  test_io.py  test_metrics.py  test_plots.py  test_projection.py  test_report.py
